<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 	
 <PreferenceCategory
            android:title="Method Limit Settings">

	<ListPreference
            android:key="First sample method"
            android:entries="@array/firstMethodLimit"
            android:summary="@string/firstMethodLimit_summary"
            android:entryValues="@array/firstMethodLimitValues"
            android:title="@string/firstMethodLimit"
            android:defaultValue="50" />
	
	<ListPreference
            android:key="Second sample method"
            android:entries="@array/secondMethodLimit"
            android:summary="@string/secondMethodLimit_summary"
            android:entryValues="@array/secondMethodLimitValues"
            android:title="@string/secondMethodLimit"
            android:defaultValue="50" />
	
	<ListPreference
            android:key="Third sample method"
            android:entries="@array/thirdMethodLimit"
            android:summary="@string/thirdMethodLimit_summary"
            android:entryValues="@array/thirdMethodLimitValues"
            android:title="@string/thirdMethodLimit"
            android:defaultValue="50" />
	
    </PreferenceCategory>

</PreferenceScreen>